--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ body {
 }
 
 .content h1 {
-    font-size: 3rem;
+    font-size: 5rem;
     margin: 0;
     font-weight: bold;
 }
@@ -183,3 +183,87 @@ body {
     text-underline-offset: 0.3rem;
 
 }
+
+
+/* content2 */
+
+
+
+.content2 {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 5rem;
+    /* separa del sidebar */
+}
+
+.content2 h1 {
+    font-size: 5rem;
+    margin: 0;
+    font-weight: bold;
+}
+
+.content2>p {
+    margin: 20px 0;
+    font-size: 1.2rem;
+    background-color: rgba(240, 248, 255, 0.4);
+    backdrop-filter: blur(5px);
+    padding: 2rem;
+    border-radius: 3rem;
+    margin: 2rem;
+
+}
+
+.content2>button {
+    background: rgba(0, 128, 128, 0.7);
+    border: none;
+    padding: 12px 20px;
+    color: white;
+    border-radius: 8px;
+    font-size: 1rem;
+    cursor: pointer;
+    max-width: 500px;
+    backdrop-filter: blur(10px);
+
+}
+
+.content2 button:hover {
+    background: rgba(0, 128, 128, 1);
+    text-decoration: underline 0.2rem;
+    text-underline-offset: 0.3rem;
+
+}
+
+.team {
+    padding-left: 6rem;
+    background-color: rgba(240, 248, 255, 0.4);
+    backdrop-filter: blur(5px);
+    border-radius: 3rem;
+    display: flex;
+    gap: 1rem;
+
+}
+
+.team img {
+    height: 40px;
+    width: 40px;
+    border-radius: 2rem;
+    
+}
+
+.team div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+        flex: 1;
+    background-color: rgba(240, 248, 255, 0.4);
+    border-radius: 3rem;
+}
+
+
+
+
+
