--- a/style.css
+++ b/style.css
@@ -274,3 +274,13 @@ body {
     border-color: azure;
     background: rgba(0, 128, 128, 1);
 }
+
+.container > form{
+    margin-right: 6rem;
+    margin-bottom: 5rem;
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+   
+}
