--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ body {
 
 
 }
-.logo > img {
+
+.logo>img {
     filter: brightness(0) invert(1);
 }
 
@@ -108,6 +109,8 @@ body {
     display: flex;
     height: 100vh;
     color: white;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Sidebar a la izquierda */
@@ -145,6 +148,12 @@ body {
     height: 34px;
     cursor: pointer;
 }
+
+.sidebar ul li img:hover {
+    filter: brightness(0) saturate(100%) invert(41%) sepia(92%) saturate(2375%) hue-rotate(182deg) brightness(97%) contrast(102%);
+
+}
+
 
 /* Contenido principal */
 .content {
@@ -261,7 +270,7 @@ body {
     background-color: rgba(240, 248, 255, 0.4);
     border-radius: 3rem;
     aspect-ratio: 1/1;
-        backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
 }
 
 .team button {
@@ -275,12 +284,51 @@ body {
     background: rgba(0, 128, 128, 1);
 }
 
-.container > form{
-    margin-right: 6rem;
+.container form {
+   
+    margin-right: 13rem;
     margin-bottom: 5rem;
-    flex: 2;
+    min-width: 35%;
+    max-height: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-   
+    backdrop-filter: blur(5px);
+    padding: 2rem;
+    background-color: rgba(240, 248, 255, 0.4);
+    border-radius: 3rem;
+
+
+
+}
+
+.container form input {
+    border-radius: 3rem;
+    border: 0;
+    min-height: 2rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    box-sizing: border-box;
+}
+
+.container form input[type="submit"] {
+    transition: background-color 0.4s ease;
+}
+
+.container form input[type="submit"]:hover {
+    background-color: rgb(0, 166, 255);
+    cursor: pointer;
+
+
+}
+
+.container form textarea {
+    resize: none;
+    min-width: 100%;
+    min-height: 5rem;
+    border-radius: 2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 0.7rem;
+    box-sizing: border-box;
 }
