--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ body {
     color: white;
     justify-content: center;
     align-items: center;
+
 }
 
 /* Sidebar a la izquierda */
@@ -285,7 +286,7 @@ body {
 }
 
 .container form {
-   
+
     margin-right: 13rem;
     margin-bottom: 5rem;
     min-width: 35%;
@@ -332,3 +333,59 @@ body {
     padding-top: 0.7rem;
     box-sizing: border-box;
 }
+
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 4rem;
+
+
+
+
+}
+
+.card img {
+    border-radius: 3rem 3rem 0 0;
+    width: 500px;
+    height: 250px;
+    aspect-ratio: 1/1;
+}
+
+.below {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 500px;
+    height: 250px;
+    backdrop-filter: blur(5px);
+    background-color: rgba(240, 248, 255, 0.4);
+    border-radius: 0 0 3rem 3rem;
+    padding: 1rem;
+    box-sizing: border-box;
+
+}
+
+.card h1{
+    font-size: 4rem;
+}
+
+.card button{
+    background: rgba(0, 128, 128, 0.7);
+    border: none;
+    padding: 12px 20px;
+    color: white;
+    border-radius: 3rem;
+    font-size: 1rem;
+    cursor: pointer;
+    max-width: 500px;
+    backdrop-filter: blur(10px);
+
+
+}
+.card button:hover{background: rgba(0, 128, 128, 1);
+    text-decoration: underline 0.2rem;
+    text-underline-offset: 0.3rem;}
+
+
