--- a/style.css
+++ b/style.css
@@ -356,9 +356,9 @@ body {
 .below {
     display: flex;
     flex-direction: column;
+    flex: 1;
     gap: 1rem;
     width: 500px;
-    height: 250px;
     backdrop-filter: blur(5px);
     background-color: rgba(240, 248, 255, 0.4);
     border-radius: 0 0 3rem 3rem;
@@ -367,11 +367,11 @@ body {
 
 }
 
-.card h1{
-    font-size: 4rem;
+.card h1 {
+    font-size: 3rem;
 }
 
-.card button{
+.card button {
     background: rgba(0, 128, 128, 0.7);
     border: none;
     padding: 12px 20px;
@@ -384,8 +384,24 @@ body {
 
 
 }
-.card button:hover{background: rgba(0, 128, 128, 1);
+
+.card button:hover {
+    background: rgba(0, 128, 128, 1);
     text-decoration: underline 0.2rem;
-    text-underline-offset: 0.3rem;}
+    text-underline-offset: 0.3rem;
+}
+
+#result {
+    max-height: 600px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    margin-right: 8rem;
+    padding: 1rem;
 
 
+
+
+}
